# MRC-Stat-Tracking

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: __main__.py  config.py
bot/app/: get_stats.py
bot/cogs/: get_stats.py  image_dimensions.py
bot/ocr/: anchors.py  bounding_rect.py  engine.py  lax_anchor_strategy.py  ocr_result.py  strategies.py  strict_anchor_strategy.py
